# matog

./: CMakeLists.txt  LICENSE.txt  README.md
libs/ctemplate/: CMakeLists.txt  template_modifiers.cc  template_pathops.cc  template_string.cc
libs/ctemplate/base/: arena.cc  arena.h  util.h
libs/ctemplate/ctemplate/: find_ptr.h  per_expand_data.h  str_ref.h  template.h  template_annotator.h  template_cache.h  template_dictionary.h  template_dictionary_interface.h  template_emitter.h  template_enums.h  template_modifiers.h  template_namelist.h  template_pathops.h  template_string.h
libs/ctemplate/unix/ctemplate/: str_ref.h  template_string.h
libs/ctemplate/windows/: config.h  port.cc  port.h
libs/ctemplate/windows/ctemplate/: template_cache.h  template_modifiers.h  template_string.h
libs/jsoncpp/: CMakeLists.txt
libs/jsoncpp/include/json/: assertions.h  config.h  value.h
libs/jsoncpp/src/: CMakeLists.txt  json_value.cpp  json_valueiterator.inl
libs/sqlite3/: CMakeLists.txt  dll.h  sqlite3.h
matog/: Array.cpp  Array.h  Array_Static.cpp  CMakeLists.txt  DB.cpp  DB.h  Degree.cpp  Degree.h  Degree_Static.cpp  GPU.cpp  GPU.h  Kernel.cpp  Kernel.h  Kernel_Static.cpp  Module.cpp  Module.h  Options.cpp  Options.h  Static.cpp  Static.h  Variant.cpp  Variant.h  analyze.h  dll.h  enums.h  internal.h  log.h  macros.h  matog.cpp  matog.h  runtime.h  util.h
matog/analyze/: Analyze.cpp  Analyze.h  CMakeLists.txt  main.cpp
matog/analyze/algorithm/: Algorithm.cpp  Algorithm.h  CMakeLists.txt  Type.h
matog/analyze/algorithm/brute/: Brute.cpp  Brute.h  CMakeLists.txt
matog/analyze/algorithm/prediction/: CMakeLists.txt  Helper.cpp  Helper.h  Prediction.cpp  Prediction.h
matog/analyze/compiler/: Compiler.cpp  Compiler.h
matog/analyze/graph/: CMakeLists.txt  Call.cpp  Call.h  Decision.cpp  Decision.h  Graph.cpp  Graph.h  Graph_Static.cpp  Node.cpp  Node.h
matog/analyze/graph/call/: CMakeLists.txt  Item.cpp  Item.h
matog/analyze/graph/node/: CMakeLists.txt  Compare.cpp  Compare.h
matog/analyze/training/: CMakeLists.txt  Data.cpp  Data.h  Data_Index.cpp  Training.cpp  Training.h
matog/array/: CMakeLists.txt  Field.cpp  Field.h  Set.cpp  Set.h  Type.h
matog/array/field/: CMakeLists.txt  Memory.h  Type.cpp  Type.h  VType.cpp  VType.h
matog/code/: CMakeLists.txt  CMakeModel.cpp  CMakeModel.h  CodeDefine.cpp  CodeDefine.h  CodeHelper.cpp  CodeHelper.h  CodeHelper_Accessors.cpp  CodeHelper_FieldType.cpp  CodeHelper_Ident.cpp  CodeHelper_Index.cpp  CodeHelper_Name.cpp  CodeHelper_Type.cpp  CodeHelper_Values.cpp  CodeHint.cpp  CodeHint.h  CodeModel.cpp  CodeModel.h  CodeRange.cpp  CodeRange.h  CodeTemplate.cpp  CodeTemplate.h  CodeVar.cpp  CodeVar.h  CodeVar_tpl.cpp  Dyn.cpp  Dyn.h  FileParser.cpp  FileParser.h  Global.cpp  Global.h  Header.cpp  Header.h  Host.cpp  Host.h  MatogBuilder.cpp  MatogBuilder.h  Shared.cpp  Shared.h  Template.cpp  (+2 more)
matog/code/tpl/: CMakeLists.tpl  FindMATOG.cmake  accessor.tpl  accessor_accessor.tpl  accessor_data.tpl  accessor_field.tpl  accessor_forward_accessor.tpl  accessor_forward_data.tpl  accessor_init_accessor.tpl  accessor_init_data.tpl  accessor_init_data2.tpl  accessor_init_data3.tpl  accessor_init_field.tpl  accessor_init_func.tpl  accessor_init_value.tpl  accessor_operator_accessor.tpl  accessor_operator_accessor_field.tpl  accessor_operator_accessor_swap.tpl  accessor_operator_accessor_swap_field.tpl  accessor_operator_root.tpl  accessor_operator_root_field.tpl  accessor_operator_struct.tpl  accessor_operator_value.tpl  accessor_operator_vector.tpl  accessor_params_data.tpl  accessor_params_parent.tpl  accessor_params_root.tpl  accessor_params_value.tpl  accessor_super_accessor.tpl  aosoa.tpl  aosoa_pointer_struct.tpl  aosoa_recursive.tpl  compare_dim.tpl  compare_float.tpl  compare_int.tpl  copy_dim.tpl  copy_field.tpl  count.tpl  count_T.tpl  count_T_root.tpl  (+95 more)
matog/cuda/: Architecture.h  CMakeLists.txt  CUBINStore.cpp  CUBINStore.h  CUDA.cpp  CUDA.h  Jit.cpp  Jit.h  NVDevice.cpp  NVDevice.h  Occupancy.cpp  Occupancy.h
matog/cuda/jit/: CMakeLists.txt  Item.cpp  Item.h  Target.cpp  Target.h
matog/db/: CMakeLists.txt  Clear.cpp  Clear.h  PredictionModel.cpp  PredictionModel.h  Stmt.cpp  Stmt.h  tables.h
matog/db-tool/: CMakeLists.txt  main.cpp
matog/db-tool/matog/: db.h
matog/db-tool/matog/db/: DBUtil.cpp  DBUtil.h  Info.cpp  Info.h  Merge.cpp  Merge.h  Predict.cpp  Predict.h  RegDump.cpp  RegDump.h  XAnalyse.cpp  XAnalyse.h  XBaseLine.cpp  XBaseLine.h  XPredict.cpp  (+5 more)
matog/degree/: CMakeLists.txt  PrettyPrinter.cpp  PrettyPrinter.h  Set.cpp  Set.h  Type.h
matog/event/: CMakeLists.txt  ProfilingAlgorithm.h  Type.h  event.cpp
matog/kernel/: CMakeLists.txt  Code.cpp  Code.h  Meta.cpp  Meta.h
matog/kernel/hint/: CMakeLists.txt  CountHints.cpp  CountHints.h  Identifier.h  RWHints.cpp  RWHints.h  RefHints.cpp  RefHints.h
matog/log/: CMakeLists.txt  Error.h  Logger.cpp  Logger.h  Result.cpp  Result.h  Timer.h  dll.h
matog/misc/: CMakeLists.txt  Misc.cpp  Misc.h  main.cpp
matog/runtime/: BaseArray.cpp  BaseArray.h  CMakeLists.txt  DeviceArray.cpp  DeviceArray.h  DynArray.cpp  DynArray.h  HostArray.cpp  HostArray.h  Malloc.cpp  Malloc.h  MemArray.cpp  MemArray.h  dll.h
matog/runtime/intern/: BaseArray.h  CMakeLists.txt  Context.cpp  Context.h  Decisions.cpp  Decisions.h  DeviceArray.cpp  DeviceArray.h  DynArray.cpp  DynArray.h  Exec.cpp  Exec.h  HostArray.h  MemArray.h  Predictor.cpp  Predictor.h  Runtime.cpp  Runtime.h  Runtime_Callback.cpp  Runtime_MemCpy.cpp
matog/templates/: CMakeLists.txt  Singleton.h
matog/util/: CMakeLists.txt  Env.cpp  Env.h  Exit.cpp  Exit.h  Hash.cpp  Hash.h  IO.cpp  IO.h  Mem.cpp  Mem.h  Random.cpp  Random.h  SQLStmt.cpp  SQLStmt.h  SQLiteDB.cpp  SQLiteDB.h  String.cpp  String.h  dll.h
matog/util/ml/: CMakeLists.txt  DotNN.cpp  DotNN.h  Model.cpp  Model.h  MultiplyNN.cpp  MultiplyNN.h  NN.cpp  NN.h  None.cpp  None.h  SVM.cpp  SVM.h  Type.cpp  Type.h
matog/variant/: CMakeLists.txt  Index.h  Item.cpp  Item.h  Items.h  Iterator.cpp  Iterator.h  Mul.h  Print.cpp  Print.h  Set.h  Type.h
(+48 files in other folders)
