MESSAGE(STATUS "  SQLite:		3.13.0")

ADD_LIBRARY(matog-sqlite3 SHARED dll.h sqlite3.c sqlite3.h sqlite3ext.h)

SET_PROPERTY(TARGET matog-sqlite3 PROPERTY FOLDER "libs-3rd-party")

IF(UNIX)
	SET_PROPERTY(TARGET matog-sqlite3 APPEND PROPERTY COMPILE_FLAGS -fPIC)
ENDIF()

INSTALL(TARGETS matog-sqlite3 RUNTIME DESTINATION bin LIBRARY DESTINATION lib ARCHIVE DESTINATION lib)